# llm-rationale-benchmark

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  env-setup.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.kiro/hooks/: sync-steering-docs.kiro.hook
.kiro/specs/llm-connector/: design.md  requirements.md  tasks.md
.kiro/steering/: development-workflow.md  llm-integration.md  project-architecture.md  python-standards.md
config/llms/: aliyun.yaml  deepseek.yaml  default-llms.yaml  glm.yaml  qwen3.yaml  thinking.yaml
config/questionnaires/: Turing-Test-Materials.xlsx  decision-premise.yaml  risk_propencity_example.yaml  risky-choice-framing.yaml
docs/: architecture.md  configs.md  interfaces.md  main_cli.md
docs/01-llm/: configs.md  design.md
docs/02-questionnaire/: design.md  guide.md
docs/03-runner/: design.md
docs/04-evaluator/: design.md
docs/questionnaires/: design.md
docs/superpowers/plans/: 2026-05-11-evaluator-question-analysis.md
docs/superpowers/specs/: 2026-05-11-evaluator-question-analysis-design.md
rationale_benchmark/: __init__.py  cli.py
rationale_benchmark/evaluator/: __init__.py  basic.py
rationale_benchmark/llm/: __init__.py  client.py  conversation.py  conversation_factory.py  exceptions.py  factory.py  logging.py  models.py  provider_client.py  provider_registry.py  validation.py
rationale_benchmark/llm/concurrent/: __init__.py  manager.py  queue.py  validator.py
rationale_benchmark/llm/config/: __init__.py  connector_loader.py  connector_models.py  loader.py  models.py  validator.py
rationale_benchmark/llm/http/: __init__.py  client.py  retry.py
rationale_benchmark/llm/providers/: __init__.py  aliyun.py  anthropic.py  base.py  gemini.py  openai.py  openai_compatible.py  openrouter.py
rationale_benchmark/questionnaire/: __init__.py  errors.py  loader.py  models.py  output_schema.py  schema.py  scoring.py  validate_cli.py
rationale_benchmark/runner/: __init__.py  evaluator.py  executor.py  progress_display.py  prompts.py  types.py
tests/: __init__.py
tests/cli/: test_cli.py
tests/evaluator/: test_basic.py
tests/evaluator/fixtures/config/questionnaires/: evaluator-fixture.yaml  long-section-fixture.yaml  (+1 more)
tests/llm/: __init__.py  test_client.py  test_concurrent_manager.py  test_concurrent_queue.py  test_config_loader.py  test_conversation.py  test_conversation_factory.py  test_exceptions.py  test_http_provider.py  test_logging_debugging.py  test_models.py  test_output_schema_flow.py  test_provider_factory.py  test_provider_payloads.py  test_provider_registry.py  test_response_validation_errors.py  test_response_validator.py
tests/llm/config/: __init__.py  test_config_discovery.py  test_config_display.py  test_loader.py  test_single_config_loading.py  test_validator.py
tests/llm/http/: __init__.py  test_client.py  test_retry.py
tests/llm/integration/: test_concurrent_processing.py  test_config_management.py  test_end_to_end.py  test_provider_integrations.py
tests/llm/providers/: __init__.py  test_anthropic.py  test_base.py  test_gemini.py  test_openai.py  test_openrouter.py  test_provider_error_handling.py
tests/questionnaire/: test_loader.py  test_scoring.py  test_validate_cli.py
tests/runner/: __init__.py  test_executor.py  test_progress_display.py  test_prompts.py
